css da header e da id convite

--- a/index.html
+++ b/index.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CCXP22</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-        <p>Logo</p>
+        <img src="imagens/logo.svg" alt="">
     </header>
     <section>
         <div id="convite">
-            <h1>REVIVA O ÉPICO</h1>
-            <h2>DE 01 A 04 DE DEZEMBRO</h2>
-            <p>Você consegue sentir? É aquela sensação de finalmente poder falar em voz alta: "estamos em casa". Sim, em dezembro de 2022, teremos a volta da CCXP física. Mas não será qualquer CCXP, vai ser a maior de todos os tempos. Prepare-se para visitar seus universos favoritos, explorar o Artists' Valley, se emocionar nos auditórios e encontrar aventuras épicas a cada passo pelos nossos corredores.</p>
+            <div id="textConvite">
+                <h1>REVIVA O ÉPICO</h1>
+                <h2>DE 01 A 04 DE DEZEMBRO</h2>
+                <p>Você consegue sentir? É aquela sensação de finalmente poder falar em voz alta: "estamos em casa".
+                    Sim, em dezembro de 2022, teremos a volta da CCXP física. Mas não será qualquer CCXP, vai ser a
+                    maior de todos os tempos. Prepare-se para visitar seus universos favoritos, explorar o Artists'
+                    Valley, se emocionar nos auditórios e encontrar aventuras épicas a cada passo pelos nossos
+                    corredores.</p>
+            </div>
+
         </div>
         <div>
-            <h1>00D</h1>
-            <h1>00H</h1>
-            <h1>00M</h1>
-            <h1>00S</h1>
+            <div id="countDow">
+                <h1>00D</h1>
+                <h1>00H</h1>
+                <h1>00M</h1>
+                <h1>00S</h1>
+            </div>
 
             <h2>PARA A MAIOR CCXP DE TODOS OS TEMPOS</h2>
             <p>Video</p>
@@ -34,4 +47,5 @@
         <button>GARANTA O SEU!</button>
     </section>
 </body>
+
 </html>
