css do  cronometro e video

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </div>
 
         </div>
-        <div>
-            <div id="countDow">
+        <div id="cronoVideo">
+            <div id="cronometro">
                 <h1>00D</h1>
                 <h1>00H</h1>
                 <h1>00M</h1>
@@ -36,7 +36,9 @@
             </div>
 
             <h2>PARA A MAIOR CCXP DE TODOS OS TEMPOS</h2>
-            <p>Video</p>
+            
+            <div id="video"><video src="/imagens/video.mp4"></video></div>
+            
         </div>
     </section>
     <section>
