html e css sessão ingressos

--- a/index.html
+++ b/index.html
@@ -41,12 +41,18 @@
             
         </div>
     </section>
-    <section>
+    <section id="ingressos">
         <div>
-            <p>AINDA DÁ TEMPO DE GARANTIR O SEU, MAS CORRE!</p>
-            <p>ingressos</p>
+            <h2>AINDA DÁ TEMPO DE GARANTIR O SEU, MAS CORRE!</h2>
+            <img src="imagens/ingressos/quinta.svg" alt="">
+            <img src="imagens/ingressos/sexta.svg" alt="">
+            <img src="imagens/ingressos/sabado.svg" alt="">
+            <img src="imagens/ingressos/domingo.svg" alt="">
         </div>
-        <button>GARANTA O SEU!</button>
+        
+        <div id="garanta">
+            <button>GARANTA O SEU!</button>
+        </div> 
     </section>
 </body>
 
